export interface IBaseEntityData {
  id: string | number;
  createdAt?: Date;
  updatedAt?: Date;
}
